# shpb-shtb-data-processor

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.en-US.md  README.md  README.zh-CN.md  alignment_profiles.json  install_dev.bat  pyproject.toml  run_app.bat
docs/: user_manual.en-US.md  user_manual.zh-CN.md
examples/: README.en-US.md  README.zh-CN.md  batch_config.json  synthetic_shpb_dispersion_large_bar.csv  synthetic_shpb_dispersion_large_bar.xlsx  synthetic_shpb_dispersion_large_bar_config.json  synthetic_shpb_dispersion_large_bar_metadata.json  synthetic_shpb_dispersion_long_clean.csv  synthetic_shpb_dispersion_long_clean.xlsx  synthetic_shpb_dispersion_long_clean_config.json  synthetic_shpb_dispersion_long_clean_metadata.json  synthetic_shpb_dispersion_long_noisy.csv  synthetic_shpb_dispersion_long_noisy.xlsx  synthetic_shpb_dispersion_long_noisy_config.json  synthetic_shpb_dispersion_long_noisy_metadata.json  synthetic_shpb_ideal.csv  synthetic_shpb_ideal.xlsx  synthetic_shpb_ideal_metadata.json  synthetic_shpb_noisy.csv  synthetic_shpb_noisy.xlsx  synthetic_shpb_noisy_metadata.json  synthetic_shpb_overlap.csv  synthetic_shpb_overlap.xlsx  synthetic_shpb_overlap_metadata.json  synthetic_shpb_unbalanced.csv  synthetic_shpb_unbalanced.xlsx  synthetic_shpb_unbalanced_metadata.json  test-1.xlsx  test-2.xlsx
locales/: en_US.json  zh_CN.json
scripts/: benchmark_dispersion.py  generate_dispersion_examples.py  generate_samples.py
tests/: conftest.py  test_alignment.py  test_alignment_profiles.py  test_calculation_signs.py  (+8 more)
(+89 files in other folders)
