[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shpb-shtb-data-processor"
version = "1.0.0"
description = "Reproducible SHPB/SHTB data processing, quality assessment, and reporting toolkit."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "SHPB/SHTB Data Processor Team" }
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "pydantic>=2.0",
  "openpyxl>=3.1",
  "xlsxwriter>=3.1",
  "PySide6>=6.6",
  "pyqtgraph>=0.13",
  "PyYAML>=6.0",
  "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
shpb-processor = "shpb_processor.__main__:main"
shpb-generate-samples = "shpb_processor.sample_data:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
